# telegram-phone-bot

./: app.py  auto_restart_stable_phone_bot_v9_5.py  bot_new.py  clean_bot.py  main.py  malaysia_phone_bot.py  malaysia_phone_bot_clean.py  malaysia_phone_bot_final.py  malaysia_phone_bot_final_location.py  malaysia_phone_bot_fixed.py  malaysia_phone_bot_ultimate.py  malaysia_phone_bot_v2.py  minimal_bot.py  pyproject.toml  render (1).yaml  render.yaml  requirements (1).txt  requirements.txt  requirements.txt.txt  requirements_clean.txt  requirements_final.txt  requirements_stable.txt  simple_http_bot.py  start.sh  telegram_bot_v10_full.py  telegram_bot_v10_simplified.py  web_bot_stable.py  web_bot_v10_full.py
